    * `authSource` is now correctly defaulted to `"$external"` for MONGODB-AWS (instead of the database name or `"admin"`).
    * The requirement that a password is provided is now enforced when the authentication mechanism is specified for:
      * PLAIN
      * SCRAM-SHA-1
      * SCRAM-SHA-256
    * `authMechanismProperties` is now prohibited (instead of ignored) when the authentication mechanism is specified for:
      * PLAIN
      * SCRAM-SHA-1
      * SCRAM-SHA-256
      * MONGODB-X509
    * `authMechanismProperties` is now validated and warns for invalid or unsupported fields when the authentication mechanism is specified for:
      * GSSAPI: supported fields are SERVICE_NAME, CANONICALIZE_HOST_NAME, SERVICE_REALM, and SERVICE_HOST.
      * MONGODB-AWS: supported fields are AWS_SESSION_TOKEN.

libmongoc 1.30.2
================

Fixes:

  * Fix C23 build on Windows.

Thanks to everyone who contributed to the development of this release.

  * Jeroen Ooms

libmongoc 1.30.1
================

No changes since 1.30.0. Version incremented to match the libbson version.

libmongoc 1.30.0
================

Fixes:

  * Additional APM events required by the SDAM specification will now be delivered:
    * Servers that have seen `server_opening` will now see a `server_closed` prior to `topology_closed`.
    * Before `topology_closed`, a `topology_changed` event will transition to `Unknown` topology type.
  * Fix reporting insert IDs in `mongoc_bulkwrite_t` when verbose results requested.

Improvements:

  * Improve performance of `mongoc_server_description_new_copy`.

New Features:

  * Add support for structured logging.
    * See `mongoc_client_set_structured_log_opts` and `mongoc_client_pool_set_structured_log_opts`.
  * Add option to configure cache lifetime of In-Use Encryption data encryption keys.
    * See `mongoc_auto_encryption_opts_set_key_expiration` and `mongoc_client_encryption_opts_set_key_expiration`.